<resources>
    <string name="app_name">Moments</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="privacy_policy_statements">This is the privacy policy page</string>
    <string name="facebook_app_id">443382896033953</string>
    <string name="fb_login_protocol_scheme">fb443382896033953</string>
    <string name="title_activity_timeline">Timeline</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="hint_phone_number_password">Password</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="phone_title_text">Phone Number</string>
    <string name="send_image">Send Image to Firebase</string>
    <string name="location">Location</string>
    <string name="photos">Photos</string>
    <string name="about">About</string>
    <string name="i_love_diamonds">I Love Diamonds</string>
    <string name="gautam">Gautam</string>
    <string name="title_activity_wwewew">wwewew</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="name">Name</string>
    <string name="new_upload">New Upload</string>
    <string name="enter_the_title">Enter the title</string>
    <string name="enter_description">Enter Description</string>
    <string name="choose_image">Choose Image</string>
    <string name="upload">Upload Image</string>
    <string name="submit">Submit</string>
    <string name="relationship">Relationship</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="email">Email</string>
    <string name="user_info">User Info</string>
    <string name="add_comments">add comments</string>
    <string name="like">Like</string>
    <string name="hey_there">Hey There</string>
    <string name="title">Title</string>
    <string name="_0_people_liked_your_post">0 friends liked your post</string>
    <string name="user_name">USER NAME</string>
    <string name="likes">Likes</string>


    <string-array name="RelationshipStatus">
        <item>Single</item>
        <item>In a Relationship</item>
        <item>Married</item>
        <item>Complicated</item>

    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="comment">Comment</string>
    <string name="friends">Friends</string>
    <string name="_0">0</string>
    <string name="no_notification_yet">No Notification Yet</string>


</resources>
