<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3ff2ce"
    tools:context="com.practice.android.moments.Activities.PhoneAuth"
    tools:ignore="HardcodedText,RtlHardcoded,ButtonStyle">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="Login "
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:weightSum="2.0">

        <EditText
            android:id="@+id/field_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30sp"
            android:layout_weight="1.0"
            android:gravity="center"
            android:hint="@string/hint_phone_number"
            android:inputType="phone" />

        <EditText
            android:id="@+id/field_verification_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1.0"
            android:gravity="center"
            android:hint="@string/hint_verification_code"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="64dp"
        android:orientation="horizontal"
        android:weightSum="3.0">

        <Button
            android:id="@+id/button_start_verification"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/start_phone_auth"
            android:theme="@style/ThemeOverlay.MyDarkButton" />

        <Button
            android:id="@+id/button_verify_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="5dp"
            android:layout_weight="1.0"
            android:text="@string/verify_phone_auth"
            android:theme="@style/ThemeOverlay.MyDarkButton" />

        <Button
            android:id="@+id/button_resend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginLeft="5dp"
            android:layout_weight="1.0"
            android:text="@string/resend_phone_auth"
            android:theme="@style/ThemeOverlay.MyDarkButton" />
    </LinearLayout>

</RelativeLayout>
