<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context="com.practice.android.moments.Fragments.Upload_picture">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="@dimen/_270sdp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_25sdp"
        android:contentDescription="@string/new_upload"
        android:padding="@dimen/_4sdp"
        android:src="@drawable/add_btn" />

    <EditText
        android:id="@+id/image_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView2"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_26sdp"
        android:background="@drawable/input"
        android:gravity="center"
        android:hint="@string/enter_the_title"
        android:inputType="textShortMessage"
        android:maxLines="1"
        android:padding="@dimen/_6sdp" />


    <EditText
        android:id="@+id/image_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/image_title"
        android:layout_marginBottom="@dimen/_16sdp"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/input"
        android:gravity="center"
        android:hint="@string/enter_description"
        android:inputType="textMultiLine"
        android:padding="@dimen/_6sdp" />


    <Button
        android:id="@+id/button_upload"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:backgroundTint="#b2dfdb"
        android:ellipsize="marquee"
        android:text="@string/upload"
        android:textColor="#000" />

</RelativeLayout>
