<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollProfile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_material_dark_1"
    tools:context="com.practice.android.moments.Fragments.ProfileFragment"
    tools:ignore="ContentDescription,ObsoleteLayoutParam,RtlHardcoded">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_material_dark_1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/header_cover_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:adjustViewBounds="true"
            android:background="#fff"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:scaleType="centerCrop"
            android:src="@drawable/c1" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_profile_photo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:elevation="5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/c2" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp">

                <LinearLayout
                    android:id="@+id/check"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/photosNum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/imagenumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"

                            android:text=""
                            android:textColor="#fff"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/photos"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/photos"
                            android:textAlignment="center"
                            android:textColor="#fff"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/photos"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@+id/photos"
                        android:orientation="vertical"
                        tools:ignore="ObsoleteLayoutParam,RtlHardcoded">

                        <TextView
                            android:id="@+id/friendnumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text=""
                            android:textColor="#fff"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/friends"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/friends"

                            android:textAlignment="center"
                            android:textColor="#fff"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>

                <ImageView
                    android:id="@+id/settings"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_below="@+id/check"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="10dp"
                    android:foregroundTint="#fff"
                    android:src="@drawable/settings2"
                    android:tint="#fff" />
            </RelativeLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/user_profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/user_name"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="22sp" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/grid_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/user_profile_short_bio"
            android:background="@color/primary_material_dark_1">

        </android.support.v7.widget.RecyclerView>


    </LinearLayout>


</ScrollView>